estrutura css added

--- a/src/assets/css/EstruturaDaPagina.css
+++ b/src/assets/css/EstruturaDaPagina.css
@@ -7,7 +7,7 @@
     width: 100%;
     text-align: center;
     color:white;
-    border-bottom: 2px grey solid;
+    border-bottom: 2px rgb(148, 146, 146) solid;
     background-color: rgba(181, 203, 238, 0.918);
 }
 
