atualização no css

--- a/src/components/section.css
+++ b/src/components/section.css
@@ -1,3 +1,17 @@
 .titulos {
-    margin: 20px;
+    margin: 20px 30px;
+    
+}
+
+button {
+    color: rgb(0, 140, 255);
+    background-color: white;
+    border: solid black 1px;
+    padding: 5px 10px;
+    border-radius: 5px;
+    margin: 10px 0px;
+}
+
+span {
+    margin: 0px 30px;
 }
