--- a/src/alunos/tabela.css
+++ b/src/alunos/tabela.css
@@ -3,12 +3,12 @@ table {
 }
 
 th {
-    text-align: center;
+    text-align: left;
     padding: 0px 5px;
 }
 
 td {
-    text-align: center;
+    text-align: left;
     padding: 0px 5px;
 }
 
