--- a/src/components/EstruturaDaPagina.css
+++ b/src/components/EstruturaDaPagina.css
@@ -1,19 +1,30 @@
-.mainPage {
-    height: 100vh;
-    background-color: rgba(216, 214, 214, 0.753);
-    
+body {
+    background-color:rgba(229, 226, 226, 0.527);
 }
 
 .header {
     width: 100%;
-    text-align: center;
     color:white;
     border-bottom: 2px rgb(148, 146, 146) solid;
-    background-color: rgba(181, 203, 238, 0.918);
+    background-color: rgba(164, 193, 240, 0.918);
+    display: flex;
+    flex-direction: column;
+    margin: 0px;
+
+}
+    
+.header h1  {
+    margin: 0px 30px;
+
+}
+
+.header h2 {
+    margin: 0px 30px;
+
 }
 
 .section {
-    min-height: 35%;
-  
+   height: 350px;
+   
   }
 
